[tool.poetry]
name = "appasap"
version = "0.1.0"
description = "application analytics scraper and parser"
authors = ["Yasuhisa Honda <nqvno14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
